Closed Bug 433740 Opened 16 years ago Closed 16 years ago

itemDeleted event not fired when item is deleted from trash

Categories

(MailNews Core :: Backend, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9

People

(Reporter: rain1, Assigned: rain1)

References

Details

Attachments

(2 files, 1 obsolete file)

(local mail folders)

When an item is deleted from trash, an itemDeleted notification is not sent for the message.

The itemDeleted notification works for messages shift-deleted from mail folders, or for the Empty Trash option, but not for messages deleted individually from trash.

The patch fixes this by adding a check to find out whether the item is deleted from the trash.
Attachment #320995 - Flags: superreview?(bienvenu)
Attachment #320995 - Flags: review?(bienvenu)
Attachment #320995 - Flags: superreview?(bienvenu)
Attachment #320995 - Flags: superreview+
Attachment #320995 - Flags: review?(bienvenu)
Attachment #320995 - Flags: review+
Keywords: checkin-needed
Thanks for the patch, Siddharth!

Checking in mailnews/local/src/nsLocalMailFolder.cpp;
/cvsroot/mozilla/mailnews/local/src/nsLocalMailFolder.cpp,v  <--  nsLocalMailFolder.cpp
new revision: 1.581; previous revision: 1.580
done

->FIXED
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
And i don't know what's up with cvs, or perhaps bonsai, the checkin comment looks normal here...
The patch also caused an extra itemDeleted to be fired when an item was moved out of the trash into a folder. While the itemDeleted is quite harmless (an itemMoveCopyCompleted is also fired for the same messages before the itemDeleted), it's a good idea to fix this.
Attachment #320995 - Attachment is obsolete: true
Attachment #323346 - Flags: superreview?(bienvenu)
Attachment #323346 - Flags: review?(bienvenu)
Attachment #323346 - Flags: superreview?(bienvenu)
Attachment #323346 - Flags: superreview+
Attachment #323346 - Flags: review?(bienvenu)
Attachment #323346 - Flags: review+
Keywords: checkin-needed
Attachment #320995 - Attachment description: updated patch, fixes coding style issue → [checked in] updated patch, fixes coding style issue
Attachment #320995 - Attachment is obsolete: false
Comment on attachment 323346 [details] [diff] [review]
[checked in] patch to fix regression introduced in moving items out of trash

Checking in mailnews/local/src/nsLocalMailFolder.cpp;
/cvsroot/mozilla/mailnews/local/src/nsLocalMailFolder.cpp,v  <--  nsLocalMailFolder.cpp
new revision: 1.585; previous revision: 1.584
Attachment #323346 - Attachment description: patch to fix regression introduced in moving items out of trash → [checked in] patch to fix regression introduced in moving items out of trash
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: