[Bug 433740] itemDeleted event not fired when item is deleted from trash p=Siddharth Agarwal [:sid0] <sid1337@gmail.com> r+sr=bienvenu